add buttons in control box

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
       <div>
         <img src="./assets/grip-lines-1white.svg" alt="Grip lines">
       </div>
+      <div id="button-container">
+        <button>Filter</button>
+        <button>Legend</button>
+        <button>Create</button>
+      </div>
     </div>
     <div id="dataviz"></div>
   </body>
