draggable control box

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <button id="fullscreen-button">Fullscreen</button>
     <h1 id="title-text">TimbreNet</h1>
     <div id="control-box">
-      <div>
+      <div id="drag-section">
         <img src="./assets/grip-lines-1white.svg" alt="Grip lines">
       </div>
       <div id="button-container">
