--- a/src/index.html
+++ b/src/index.html
@@ -26,87 +26,87 @@
         <p>Dynamics:</p>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Forte</label>
+            <input type="checkbox" id="filter_forte">
+            <label for="filter_forte">Forte</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Mesoforte</label>
+            <input type="checkbox" id="filter_mesoforte">
+            <label for="filter_mesoforte">Mesoforte</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Piano</label>
+            <input type="checkbox" id="filter_piano">
+            <label for="filter_piano">Piano</label>
           </div>
         </div>
         <p>Chord:</p>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">C2</label>
+            <input type="checkbox" id="filter_c2">
+            <label for="filter_c2">C2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Dm2</label>
+            <input type="checkbox" id="filter_dm2">
+            <label for="filter_dm2">Dm2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Em2</label>
-          </div>
-        </div>
-        <div class="check-row">
-          <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Forte</label>
-          </div>
-          <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Mesoforte</label>
-          </div>
-          <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Piano</label>
+            <input type="checkbox" id="filter_em2">
+            <label for="filter_em2">Em2</label>
           </div>
         </div>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Forte</label>
+            <input type="checkbox" id="filter_f2">
+            <label for="filter_f2">F2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Mesoforte</label>
+            <input type="checkbox" id="filter_g2">
+            <label for="filter_g2">G2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Piano</label>
-          </div>
-        </div>
-        <div class="check-row">
-          <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Forte</label>
-          </div>
-          <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Mesoforte</label>
-          </div>
-          <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Piano</label>
+            <input type="checkbox" id="filter_am2">
+            <label for="filter_am2">Am2</label>
           </div>
         </div>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Forte</label>
+            <input type="checkbox" id="filter_bdim2">
+            <label for="filter_bdim2">Bdim2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Mesoforte</label>
+            <input type="checkbox" id="filter_c3">
+            <label for="filter_c3">C3</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
-            <label for="subscribeNews">Piano</label>
+            <input type="checkbox" id="filter_dm3">
+            <label for="filter_dm3">Dm3</label>
+          </div>
+        </div>
+        <div class="check-row">
+          <div class="row-element-check">
+            <input type="checkbox" id="filter_em3">
+            <label for="filter_em3">Em3</label>
+          </div>
+          <div class="row-element-check">
+            <input type="checkbox" id="filter_f3">
+            <label for="filter_f3">F3</label>
+          </div>
+          <div class="row-element-check">
+            <input type="checkbox" id="filter_g3">
+            <label for="filter_g3">G3</label>
+          </div>
+        </div>
+        <div class="check-row">
+          <div class="row-element-check">
+            <input type="checkbox" id="filter_am3">
+            <label for="filter_am3">Am3</label>
+          </div>
+          <div class="row-element-check">
+            <input type="checkbox" id="filter_bdim3">
+            <label for="filter_bdim3">Bdim3</label>
+          </div>
+          <div class="row-element-check">
+            <input type="checkbox" id="filter_c4">
+            <label for="filter_c4">C4</label>
           </div>
         </div>
         
