selected button style

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <img src="./assets/grip-lines-1white.svg" alt="Grip lines">
     </div>
     <div id="button-container">
-      <button onclick="SelectBox(1)">Filter</button>
+      <button onclick="SelectBox(1)" class="selected">Filter</button>
       <button onclick="SelectBox(2)">Legend</button>
       <button onclick="SelectBox(3)">Create</button>
     </div>
