add icon for fullscreen

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <button id="fullscreen-button">Fullscreen</button>
+  <button id="fullscreen-button"><img width="24px"  src="./assets/iconfinder_fullscreen_alt_118669.svg" alt=""></button>
   <h1 id="title-text">TimbreNet</h1>
   <p id="recording-label" class="hide">Recording</p>
   <div id="control-box">
