--- a/src/index.html
+++ b/src/index.html
@@ -144,15 +144,12 @@
               </g>
             </svg>
           </div>
-          <div id="stop-button">
+          <div id="stop-button" onclick="stopRec()" style="z-index: 2;">
             <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 612 612" style="enable-background:new 0 0 612 612;"
               xml:space="preserve">
-                
                   <g>
-                    <circle cx="226" cy="226" r="200" stroke="#c83b3b" stroke-width="40" fill="none" />
-                    <rect height="200" width="200" x="126" y="126" />
+                    <rect height="400" width="400" x="100" y="100" />
                   </g>
-                
               </svg>
           </div>
         </div>
