--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,14 @@
 </head>
 
 <body>
-  <button id="fullscreen-button"><img width="24px"  src="./assets/iconfinder_fullscreen_alt_118669.svg" alt=""></button>
+  <button id="fullscreen-button"><img width="24px"  src="./assets/iconfinder_fullscreen_alt_118669.svg" alt="fullscreen"></button>
   <h1 id="title-text">TimbreNet</h1>
   <p id="recording-label" class="hide">Recording</p>
+  <a href="/about.html">
+    <button id="help-button"><img width="24px" src="./assets/Icon-round-Question_mark.svg" alt="help"></button>
+  </a>
+
+  
   <div id="control-box">
     <div id="drag-section">
       <img src="./assets/grip-lines-1white.svg" alt="Grip lines">
