Momentarily hide filter menu

--- a/src/index.html
+++ b/src/index.html
@@ -27,104 +27,104 @@
     </div>
     <div id="button-container">
       <button onclick="SelectBox(1)" class="selected" >Create</button>
-      <button onclick="SelectBox(2)">Filter</button>
-      <button onclick="SelectBox(3)">Legend</button>
+      <!-- <button onclick="SelectBox(2)">Filter</button> -->
+      <button onclick="SelectBox(2)">Legend</button>
     </div>
     <div id="box-content">
       <div id="box-create" class="box-fill">
         <button id="record-button">Record</button>
         <p id="record-text" class="helper-text">or press ctrl+R to record</p>
       </div>
-      <div id="box-filter" class="box-fill hide">
+      <!-- <div id="box-filter" class="box-fill hide">
         <p>Dynamics:</p>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="filter_forte">
+            <input type="checkbox" class="filter-checkbox" id="filter_forte">
             <label for="filter_forte">Forte</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_mesoforte">
+            <input type="checkbox" class="filter-checkbox"id="filter_mesoforte">
             <label for="filter_mesoforte">Mesoforte</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_piano">
+            <input type="checkbox" class="filter-checkbox"id="filter_piano">
             <label for="filter_piano">Piano</label>
           </div>
         </div>
         <p>Chord:</p>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="filter_c2">
+            <input type="checkbox" class="filter-checkbox"id="filter_c2">
             <label for="filter_c2">C2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_dm2">
+            <input type="checkbox" class="filter-checkbox"id="filter_dm2">
             <label for="filter_dm2">Dm2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_em2">
+            <input type="checkbox" class="filter-checkbox"id="filter_em2">
             <label for="filter_em2">Em2</label>
           </div>
         </div>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="filter_f2">
+            <input type="checkbox" class="filter-checkbox"id="filter_f2">
             <label for="filter_f2">F2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_g2">
+            <input type="checkbox" class="filter-checkbox"id="filter_g2">
             <label for="filter_g2">G2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_am2">
+            <input type="checkbox" class="filter-checkbox"id="filter_am2">
             <label for="filter_am2">Am2</label>
           </div>
         </div>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="filter_bdim2">
+            <input type="checkbox" class="filter-checkbox"id="filter_bdim2">
             <label for="filter_bdim2">Bdim2</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_c3">
+            <input type="checkbox" class="filter-checkbox"id="filter_c3">
             <label for="filter_c3">C3</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_dm3">
+            <input type="checkbox" class="filter-checkbox"id="filter_dm3">
             <label for="filter_dm3">Dm3</label>
           </div>
         </div>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="filter_em3">
+            <input type="checkbox" class="filter-checkbox"id="filter_em3">
             <label for="filter_em3">Em3</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_f3">
+            <input type="checkbox" class="filter-checkbox"id="filter_f3">
             <label for="filter_f3">F3</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_g3">
+            <input type="checkbox" class="filter-checkbox"id="filter_g3">
             <label for="filter_g3">G3</label>
           </div>
         </div>
         <div class="check-row">
           <div class="row-element-check">
-            <input type="checkbox" id="filter_am3">
+            <input type="checkbox" class="filter-checkbox"id="filter_am3">
             <label for="filter_am3">Am3</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_bdim3">
+            <input type="checkbox" class="filter-checkbox"id="filter_bdim3">
             <label for="filter_bdim3">Bdim3</label>
           </div>
           <div class="row-element-check">
-            <input type="checkbox" id="filter_c4">
+            <input type="checkbox" class="filter-checkbox"id="filter_c4">
             <label for="filter_c4">C4</label>
           </div>
-        </div>
+        </div> -->
         
         
-      </div>
+      <!-- </div> -->
       <div id="box-legend" class="box-fill hide"> </div>
       <div id="box-record" class="box-fill hide">
         <div id="record-control">
